--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body
 
 .lado-esq
 {
+    font-family: Roboto;
+    color: white;
     width: 40%;
     height: inherit;
     background-color: #1B2C42;
@@ -18,6 +20,73 @@ body
     justify-content: center;
     align-items: center;
 }
+.login-box
+{
+    width: 285px;
+    height: 295px;
+}
+.login-box form
+{
+    text-align: center;
+}
+.lado-esq label
+{
+    width: 100%;
+    text-align: center;
+}
+.lado-esq h2
+{
+    font-weight: 600;
+
+}
+.login-input
+{
+    width: 100%;
+    height: 44px;
+    padding-left: 14px;
+    border: hidden;
+    border-radius: 22px;
+    color: #1F243A;
+    margin-top: 32px;
+    outline: 0;
+}
+.lado-esq [type='submit']
+{
+    width: 138px;
+    height: 35px;
+    border: hidden;
+    border-radius: 5px;
+    color: inherit;
+    background-color: #3180F4;
+    margin-top: 32px;
+    margin-bottom: 8px;
+}
+.lado-esq [type='submit']:hover
+{
+    background-color: rgba(49,128,244, 0.9);
+}
+.lado-esq [type='submit']:focus
+{
+    outline: 0;
+    background-color: rgba(49,128,244, 0.9);
+}
+.lado-esq a
+{
+    color:white;
+    font-size: 15px;
+    text-decoration: none;
+}
+.lado-esq a:hover
+{
+    text-decoration: underline;
+}
+.lado-esq a:focus
+{
+    outline: 0;
+    text-decoration: underline;
+}
+
+
 .lado-dir
 {
     width: 60%;
@@ -25,15 +94,9 @@ body
     display: inherit;
     justify-content: center;
     align-items: center;
-
+    
 }
 .logo-svg
 {
     margin-bottom: 250px;
-}
-.login-box
-{
-    width: 285px;
-    height: 295px;
-    border: 1px solid white;
 }
