--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+html
+{
+	height: 100%;
+	width: 100%;
+}
 body
 {
+	width: inherit;
+	height: inherit;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	width: 100%;
-	height: 100vh;
 	display: flex;
 	background-color: #F6F7FA;
 }
@@ -14,7 +19,7 @@ body
 	font-family: Roboto;
 	color: white;
 	width: 40%;
-	height: inherit;
+	height: auto;
 	background-color: #1B2C42;
 	display: inherit;
 	justify-content: center;
@@ -22,11 +27,12 @@ body
 }
 .login-box
 {
-	width: 285px;
-	height: 295px;
+	min-width: 37.5%;
+	height: auto;
 }
 .login-box form
 {
+	height: auto;
 	text-align: center;
 }
 .lado-esq label
@@ -36,32 +42,32 @@ body
 }
 .lado-esq h2
 {
-	font-size: 36px;
-	font-weight: 600;
+	font-size: 2.25rem;
+	font-weight: 700;
 
 }
 .login-input
 {
-	width: 100%;
-	height: 44px;
-	margin-top: 32px;
-	padding-left: 16px;
-	font-size: 18px;
+	min-width: 100%;
+	height: 2.45em;
+	margin-top: 2rem;
+	padding-left: 1em;
+	font-size: 1.125rem;
 	border: hidden;
-	border-radius: 22px;
+	border-radius: 1.225em;
 	color: #1F243A;
 	outline: 0;
 }
 .lado-esq [type='submit']
 {
-	width: 138px;
-	height: 35px;
+	min-width: 48%;
+	height: 2.2em;
 	border: hidden;
-	border-radius: 5px;
+	border-radius: 0.37em;
 	color: inherit;
 	background-color: #3180F4;
-	margin-top: 32px;
-	margin-bottom: 6px;
+	margin-top: 2em;
+	margin-bottom: 0.375em;
 }
 .lado-esq [type='submit']:hover
 {
@@ -75,7 +81,7 @@ body
 .lado-esq a
 {
 	color:white;
-	font-size: 14px;
+	font-size: 0.875rem;
 	text-decoration: none;
 }
 .lado-esq a:hover
@@ -92,7 +98,7 @@ body
 .lado-dir
 {
 	width: 60%;
-	height: inherit;
+	height: auto;
 	display: inherit;
 	justify-content: center;
 	align-items: center;
@@ -101,4 +107,5 @@ body
 .logo-svg
 {
 	margin-bottom: 20%;
+	max-width: 46.8%;
 }
