--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-html
-{
-	height: 100%;
-	width: 100%;
-}
 body
 {
-	width: inherit;
-	height: inherit;
+	width: 100vw;
+	height: 100vh;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -28,6 +23,8 @@ body
 .login-box
 {
 	min-width: 37.5%;
+	margin-left: 1em;
+	margin-right: 1em;
 	height: auto;
 }
 .login-box form
@@ -48,7 +45,7 @@ body
 }
 .login-input
 {
-	min-width: 100%;
+	width: 100%;
 	height: 2.45em;
 	margin-top: 2rem;
 	padding-left: 1em;
