--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-html
-{
-	height: 100%;
-	width: 100%;
-}
 body
 {
-	width: inherit;
-	height: inherit;
+	width: 100vw;
+	height: 100vh;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -32,7 +27,6 @@ body
 }
 .login-box form
 {
-	height: auto;
 	text-align: center;
 }
 .lado-esq label
@@ -56,7 +50,12 @@ body
 	border: hidden;
 	border-radius: 1.225em;
 	color: #1F243A;
+}
+.login-input:focus
+{
 	outline: 0;
+	/* box-shadow: 0 0 0 2px #1B2C42,
+				0 0 0 4px #fff; */
 }
 .lado-esq [type='submit']
 {
@@ -65,18 +64,20 @@ body
 	border: hidden;
 	border-radius: 0.37em;
 	color: inherit;
-	background-color: #3180F4;
+	background-color: #2e7df5;
 	margin-top: 2em;
 	margin-bottom: 0.375em;
 }
 .lado-esq [type='submit']:hover
 {
-	background-color: rgba(49,128,244, 0.9);
+	background-color: hsl(216, 91%, 62%);
 }
 .lado-esq [type='submit']:focus
 {
 	outline: 0;
-	background-color: rgba(49,128,244, 0.9);
+	box-shadow: 0 0 0 2px #1B2C42,
+				0 0 0 4px #2e7df5;
+	/* background-color: hsl(216, 91%, 62%); */
 }
 .lado-esq a
 {
